test/should-fail/no-such-method/exe.dk
// -*- mode: C++; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass string; // dk:length()

// no-such-method

int-t main()
{
  object-t o = make(object:klass);
  dk:length(o);
  return 0;
}
